<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".NoteActivity">


        <Spinner
            android:id="@+id/spinner_courses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:nextFocusRight="@id/text_note_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_note_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_courses"
            app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

        <EditText
            android:id="@+id/text_note_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/text_note_title"
            app:layout_constraintStart_toStartOf="@+id/text_note_title"
            app:layout_constraintTop_toBottomOf="@+id/text_note_title" />

        <com.dexcom.sdk.aac_fullcontentapp.ui.ModuleStatusView
            android:id="@+id/moduleStatusView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/text_note_text"
            app:layout_constraintStart_toStartOf="@+id/text_note_text"
            app:layout_constraintTop_toBottomOf="@id/text_note_text"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>